# Fanorona-Game

./: .gitignore  .gitlab-ci.yml  README.md  dune-project  fanorona.opam
fanorona/: dune-project
fanorona/lib/: dune
ia/: dune  ia_nico.ml  ia_nico.mli
lib/: abounaim.ml  abounaim.mli  arena.ml  arena.mli  coutard.ml  coutard.mli  dune  engine.ml  engine.mli  fitzgerald.ml  hijazi.ml  hijazi.mli  lacenne.ml  lacenne.mli  laidouni.ml  laidouni.mli  nico.ml  nico.mli  player.ml  player.mli
player/: dune  player.ml
test/: dune  test_arena.ml  test_engine.ml  test_ia.ml  utils.ml
